# perception

./: README.html  README.md  validdata.pkl
assignment_2/: CMakeLists.txt  package.xml
assignment_2/launch/: ur5e_ass2_calib.launch  ur5e_ass2_icp.launch
assignment_2/models/big_block/: model.config  model.sdf
assignment_2/models/block/: model.config  model.sdf
assignment_2/models/charuco/: charuco.blend  model.config  model.sdf
assignment_2/models/charuco/materials/scripts/: charuco.material
assignment_2/models/charuco/meshes/: charuco.dae  charuco_6x7.dae  charuco_8x10.dae
assignment_2/models/checkerboard/: model.config  model.sdf
assignment_2/models/checkerboard/materials/scripts/: checkerboard.material
assignment_2/models/checkerboard/meshes/: checkerboard.dae
assignment_2/models/workspace/: model.config  model.sdf
assignment_2/scripts/: calib_demo.py  create_stage.py  move_group_interface.py  traffic_signs_classifier.py
assignment_2/world/: stage_calib.sdf  stage_icp.sdf
src/: Q3Q4.py  Q5.py
